[tool.poetry]
name = "unitemate"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
requests = "^2.32.3"
pydantic = "^2.10.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
flake8 = "^7.1.1"
boto3 = "^1.36.2"
boto3-stubs = "^1.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
